Draft Version - Important changes in structure
Draft version for programmed sessions.
It's possible to select an speed&slope program in order make the machine run accordingly. This way there's no need to enter speed and slope manually.
The program is executed in a session. When finished, the display shows the corresponding report.

--- a/main/CMakeLists.txt
+++ b/main/CMakeLists.txt
@@ -1,2 +1,2 @@
-idf_component_register(SRCS "mcu-esp32.c" "stats.c"
+idf_component_register(SRCS "mcu-esp32.c" "stats.c" "session.c" "programs.c"
                     INCLUDE_DIRS ".")
